--- a/HocNhatNguMina/app/src/main/AndroidManifest.xml
+++ b/HocNhatNguMina/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.VIBRATE" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -65,7 +64,12 @@
         <service android:name=".PlayMediaService" />
         <service
             android:name=".PlayService"
-            android:exported="false"></service>
+            android:exported="false" />
+
+        <receiver
+            android:name=".PlayClickReceiver"
+            android:enabled="true"
+            android:exported="false"></receiver>
     </application>
 
 </manifest>
